# road-risk-ml

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-pipeline.yml  weekly-training.yml
road_risk_model/: features.json  model.json
scripts/: backfill_feature_pipeline.py  batch_inference_pipeline.py  daily_feature_pipeline.py  training_pipeline.py
src/: clients.py  dashboard.py  feature_store.py  locations.json  requirements.txt  settings.py  transforms.py  utils.py
